<resources>
    <string name="app_name">Bird Apps</string>
    <string name="image_view">image_view</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">Tentang</string>
    <string name="menu_in">Masuk</string>
    <string name="menu_reg">Bergabung</string>
    <string name="title_home">Home</string>
    <string name="title_search">Mencari</string>
    <string name="title_add">Tambah</string>
    <string name="title_sigin">Masuk</string>
    <string name="title_username">Username</string>
    <string name="title_pass">Kata Sandi</string>
    <string name="title_sign">Masuk</string>
    <string name="title_full_name">Nama Lengkap</string>
    <string name="title_sign_up">Bergabung</string>
    <string name="title_profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="samplereview">Aplikasi ini dibuat untuk memudahkan para pemula yang baru memulai memelihara burung dengan baik. Apabila ingin memulai usaha dengan berternak burung aplikasi pilihan yang tepat</string>

    <string name="buttonanimasi_1">Burung Beo</string>
    <string name="buttonanimasi_2">Burung Kolibri</string>
    <string name="buttonanimasi_3">Burung RedCoat</string>

    <string-array name="list_jenis_burung">
        <item>pilih Janis Burung</item>
        <item>Anis Kembang</item>
        <item>Anis Merah</item>
        <item>Beo Enggano</item>
        <item>Beo Jawa</item>
        <item>Beo Nias</item>
        <item>Beo Srilanka</item>
        <item>Jalak Bali</item>
        <item>Jalak Suren</item>
        <item>Livebird</item>
    </string-array>
</resources>