<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cnd.birdapps.ui.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cnd.birdapps.ui.view.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_signIn"
        android:name="com.cnd.birdapps.ui.view.signin.SignInFragment"
        android:label="@string/title_sigin"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_navigation_signin_to_signUpFragment"
            app:destination="@id/navigation_signUp" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signUp"
        android:name="com.cnd.birdapps.ui.view.signup.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />
</navigation>