<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.signin.SignInFragment">

    <TextView
        android:id="@+id/text"
        style="@style/poppinsSemibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selamat datang"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView9"
        style="@style/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Di Aplikasi Burung"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@+id/icon_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userInputLayout"
        style="@style/EditTextCustom"
        android:layout_width="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toTopOf="@+id/icon_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:hint="@string/title_username"
            android:inputType="text"
            android:maxLength="16"
            android:text="udin123"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passInputLayout"
        style="@style/EditTextCustom"
        android:layout_width="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/userInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="@string/title_pass"
            android:inputType="textPassword"
            android:text="123"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0"
        android:text="@string/title_sign"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:visibility="visible"
        app:backgroundTint="@color/purple"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/passInputLayout"
        app:rippleColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/icon_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Belum Punya akun?"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/btn_sign_up"
        style="@style/poppinsSemibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bergabung"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="Dengan mendaftarkan diri, kamu membantu untuk membangun aplikasi ini dan yang bersedia membagikan ilmunya dalam memelihara dan merawat berbagai jenis burung."
        android:textAlignment="center"
        android:textSize="@dimen/text_size_11"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>